--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,10 +1,15 @@
 <section class="hero {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold is-primary" {% if page.hero_image %} style="background: url('{{ page.hero_image }}') no-repeat center center; background-size: cover;" {% endif %}>
-    <div class="hero-body">
+    <div class="hero-body {% if page.is_home == true %}home{% endif %}">
         <div class="container">
-            <p class="title is-2">{{ page.title }}</p>
-            <p class="subtitle is-3">{{ page.subtitle }}</p>
-            {% if page.hero_link %}
-                <a href="{{ page.hero_link | prepend: site.baseurl  }}" class="button is-info is-large">{{ page.hero_link_text }}</a>
+            {% if page.is_home == true %}
+                <img width="80%" class="logo" src="./img/CSPECLOGOprimary.png" />
+            {% endif %}
+            {% if page.is_home == false %}
+                <p class="title is-2">{{ page.title }}</p>
+                <p class="subtitle is-3">{{ page.subtitle }}</p>
+                {% if page.hero_link %}
+                    <a href="{{ page.hero_link | prepend: site.baseurl  }}" class="button is-info is-large">{{ page.hero_link_text }}</a>
+                {% endif %}
             {% endif %}
         </div>
     </div>
