--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 $family-sans-serif: 'Montserrat', sans-serif;
-$primary: #188eac !default;
+$primary: #0089b8 !default;
 
 $tabs-link-active-color: $primary;
 $tabs-link-active-border-bottom-color: $primary;
@@ -15,4 +15,9 @@ $tabs-link-active-border-bottom-color: $primary;
 
 .gh-sponsor {
   color: #ea4aaa;
+}
+
+.hero {
+  background-image: linear-gradient(141deg, #1c123c 0%, #0089b8 71%, #0079d2 100%) !important;
+  border-bottom: 10px solid #0089b8;
 }
